--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.7.10",
